refactor: improve request service pagination and add DTO serialization tests